# spajam2022-pre-back

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
Docker/postgres/initdb/: 00startup.sql  01fixeddata.sql
Docker/python/: Dockerfile
src/: main.py  types.py
src/repository/: db.py
src/routers/: missions.py  ranking.py  users.py
